assets/pages/new-contributions-landing/contributionsLanding.scss
// -----  gu-sass ----- //

@import '~stylesheets/gu-sass/gu-sass';
@import '~components/progressMessage/progressMessage';
@import '~components/spinners/animatedDots';
@import '~components/directDebit/directDebitPopUpForm/directDebitPopUpForm';
@import '~components/directDebit/directDebitForm/directDebitForm';
@import '~components/errorMessage/errorMessage';
@import '~components/ctaLink/ctaLink';
@import '~components/generalErrorMessage/generalErrorMessage';
@import '~components/button/button';
@import '~components/marketingConsentNew/marketingConsent';
@import '~pages/new-contributions-landing/components/ContributionThankYou/ContributionThankYou';
@import '~pages/new-contributions-landing/components/ContributionTicker/ContributionTicker';
@import '~pages/new-contributions-landing/components/ButtonWithRightArrow/ButtonWithRightArrow';
@import '~pages/new-contributions-landing/components/StripePaymentRequestButton/StripePaymentRequestButton';
@import '~pages/new-contributions-landing/components/ContributionSurvey/ContributionSurvey';


body {
  min-height: 100vh;
}

.gu-content {
  position: relative;
  z-index: 0;
  overflow: hidden;
}

.gu-content--contribution-thankyou {
  background: gu-colour(news-garnett-highlight);
}

.gu-content__main {
  position: relative;
  display: flex;
  flex-direction: column-reverse;
}

.gu-content__bg {

  display: flex;
  height: 580px;
  left: 0;
  position: absolute;
  top: 245px;
  width: 100%;
  z-index: -1;

  .svg-contributions-bg-desktop {
    display: block;
    bottom: 0;
    height: 580px;
    left: 50%;
    position: fixed;
    transform: translate(-50%,0);
    width: 1400px;
  }

  @include mq($from: mobile, $until: tablet) {
    display: none;
  }

}

/*= HEADER */

.gu-content--contribution-form .header {
  display: none;
  @include mq($from: tablet) {
    display: block;
  }
}

.header {
  border: 0;
  left: 10px;
  padding: $gu-v-spacing/2 $gu-h-spacing/2 $gu-v-spacing $gu-h-spacing/2;
  width: 100%;
  margin: 0 -10px;
  font: bold 22px/1.15 $gu-headline;
  color: gu-colour(garnett-neutral-1);

  @include mq($from: tablet) {
    border-bottom: 1px solid gu-colour(garnett-neutral-4);
    font-size: 36px;
    padding: 0 $gu-h-spacing/2 $gu-v-spacing*1.5 $gu-h-spacing/2;
  }
}

.header__us-campaign {
  font-size: 27px;
  border-bottom: none;
}

header[role="banner"] {

  background-color: gu-colour(header-dark);
  border-bottom: 1px solid gu-colour(garnett-neutral-4);
  position: relative;
  height: 44px;
  display: flex;
  align-items: center;
  flex-direction: row-reverse;
  justify-content: space-between;
  z-index: 1;
  padding: 0 10px;


  @include mq($from: tablet) {
    height: 75px;
    padding: 0;
    width: auto;
  }

  @include mq($from: leftCol) {
    padding: 0 calc(50% - 550px) 0 calc(50% - 390px);
    width: 940px;
  }

  @include mq($from: wide) {
    padding: 0 calc(50% - 620px);
    width: 1240px;
  }

}

.glogo {
  width: 30px;
  height: 30px;

  .svg-roundel {
    width: 100%;
    height: 100%;
  }

  .svg-roundel__g {
    fill: gu-colour(header-dark);
  }

  @include mq($from: tablet) {
    width: 60px;
    height: 60px;
    margin-right: 10px;
  }
}

.countryGroups {
  font-family: $gu-text-sans-web;
  max-width: 355px;
  text-overflow: ellipsis;
  width: 185px;
  white-space: nowrap;
  cursor: pointer;

  summary {
    padding-left: 0;
  }

  .svg-globe {
    display: none;
  }

  @include mq($from: tablet) {
    padding: 0;
    width: 100%;
    margin-left: 10px;
    align-self: flex-end;

    summary {
      padding-left: 10px;
    }
  }
}

.countryGroups__label {
  color: #fff;
}

// Safari doesn't respect styles applied to <summary> so we need this wrapper div
.countryGroups__summary-wrapper {
  align-items: center;
  display: flex;
  height: 40px;
  outline: none;
  transition: box-shadow .2s ease-in-out, color .2s ease-in-out;

  // this is to fix IE bug where events on svgs don't bubble up
  & svg {
    pointer-events: none;
  }
}

.countryGroups:not([open]) > :not(summary) {
  display: none;
}

.countryGroups .icon {
  text-align: center;
  width: 40px;
}

.countryGroups .svg-chevron {
  width: 19px;
  height: 10px;
  fill: #fff;
}

.countryGroups[open] .svg-chevron {
  transform: rotate(180deg);
}

.countryGroups .svg-checkmark {
  width: 18px;
  height: 14px;
  fill: gu-colour(news-garnett-main-1);
}

.countryGroups .svg-globe {
  padding: 0 $gu-v-spacing;
  width: 14px;
  height: 14px;
  fill: gu-colour(garnett-neutral-1);
  fill: #fff;
}

.countryGroups summary {
  list-style: none;
  outline: none;
}

.countryGroups summary:hover,
.countryGroups summary:focus {
  box-shadow: none;
  color: inherit;
}

.countryGroups summary::-webkit-details-marker {
  display: none;
}

.countryGroups__list {
  list-style: none;
  margin: 0;
  padding: 0;
  background: gu-colour(garnett-neutral-5);
  border: 1px solid gu-colour(garnett-neutral-4);
  position: absolute;
}

.countryGroups__item:first-child > a {
  &:before {
    content: none;
  }
}

.countryGroups__item > a {
  color: inherit;
  display: flex;
  padding: 0 15px;
  line-height: 40px;
  text-decoration: none;
  justify-content: space-between;
  position: relative;


  &:before {
    content: '';
    border-top: 1px solid gu-colour(garnett-neutral-4);
    display: block;
    position: absolute;
    top: 0;
    left: 15px;
    right: 0;
  }
}

.countryGroups__item > a:hover,
.countryGroups__item > a:focus {
  background: gu-colour(garnett-neutral-3);
  font-weight: bold;
}


/*= FOOTER */

footer[role="contentinfo"] {
  padding: 0 ($gu-h-spacing / 2);
  background: gu-colour(media-garnett-main-1);
  color: gu-colour(garnett-neutral-2);
  font-size: 12px;
  display: flex;

  @include mq($from: tablet) {
    padding: 0 0 ($gu-v-spacing * 2);
    width: auto;
  }

  @include mq($from: leftCol) {
    padding: 0 calc(50% - 550px) ($gu-v-spacing * 2) calc(50% - 390px);
    width: 940px;
  }
}

footer[role="contentinfo"] a {
  color: gu-colour(garnett-neutral-5);
}
/* ... */

